--- a/public/css/login.css
+++ b/public/css/login.css
@@ -14,7 +14,7 @@ body {
 }
 
 .card.kategori.active {
-    border: 1px solid #FC544B;
+    border: 1px solid #00C6A9;
     background-color: #a54e3114;
 }
 
@@ -25,7 +25,7 @@ body {
 }
 
 .card.kategori:hover {
-    border: 1px solid #FC544B;
+    border: 1px solid #00C6A9;
     background-color: #a54e3114;
 }
 
@@ -70,7 +70,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: #FC544B !important;
+    color: #00C6A9 !important;
 }
 
 .navbar-bg {
@@ -78,11 +78,15 @@ h6 {
 }
 
 .text-main {
-    color: #FC544B !important;
+    color: #00C6A9 !important;
+}
+
+.card-main {
+    border-top: 2px solid #00C6A9 !important;
 }
 
 .bg-main {
-    background-color: #FC544B;
+    background-color: #00C6A9;
 }
 
 .bg-main:hover {
@@ -133,11 +137,11 @@ body.show-spinner>main {
 .sidebar-menu li.active a.nav-link {
     font-size: 14px !important;
     border-radius: 15px !important;
-    color: #FC544B !important;
+    color: #00C6A9 !important;
 }
 
 .sidebar-mini li.active a.nav-link {
-    background-color: #FC544B !important;
+    background-color: #00C6A9 !important;
     box-shadow: none !important;
     color: white !important;
 }
@@ -236,7 +240,7 @@ ul.timeline>li:before {
 /* my background color */
 
 .bg-soft-danger {
-    background-color: #fc544b11 !important;
+    background-color: #00C6A911 !important;
 }
 
 .bg-soft-primary {
